storybook configuration and color token

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "changeset": "changeset",
     "version-packages": "changeset version",
     "release": "turbo run build --filter=!docs && changeset publish"
+  },
+  "dependencies": {
+    "polished": "^4.2.2"
   }
 }
