Adjusting lint and ts config

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,1 +1,4 @@
-{ "extends": "@nebula-ui/ts-config/react.json", "include": ["src"] }
+{
+    "extends": "@nebula-ui/ts-config/react.json",
+    "include": ["src"]
+  }
