--- a/packages/docs/.eslintrc.json
+++ b/packages/docs/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-    "extends": "@nebula-ui/eslint-config"
-  }
+    "extends": [
+        "@nebula-ui/eslint-config",
+        "plugin:storybook/recommended"
+    ]
+}
