--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,20 +13,22 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@storybook/addon-a11y": "^7.3.0",
-    "@storybook/addon-docs": "^7.2.3",
-    "@storybook/addon-essentials": "^7.2.2",
-    "@storybook/addon-interactions": "^7.2.2",
-    "@storybook/addon-links": "^7.2.2",
+    "@storybook/addon-a11y": "^7.3.1",
+    "@storybook/addon-docs": "^7.3.1",
+    "@storybook/addon-essentials": "^7.3.1",
+    "@storybook/addon-interactions": "^7.3.1",
+    "@storybook/addon-links": "^7.3.1",
+    "@storybook/addon-mdx-gfm": "^7.3.1",
     "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.2.2",
-    "@storybook/react": "^7.2.2",
-    "@storybook/react-vite": "^7.2.2",
+    "@storybook/blocks": "^7.3.1",
+    "@storybook/react": "^7.3.1",
+    "@storybook/react-vite": "^7.3.1",
     "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/testing-library": "^0.2.0",
     "@vitejs/plugin-react": "^4.0.4",
+    "eslint-plugin-storybook": "^0.6.13",
     "prop-types": "^15.8.1",
-    "storybook": "^7.2.2",
+    "storybook": "^7.3.1",
     "storybook-addon-pseudo-states": "^2.1.0",
     "vite": "^4.4.9"
   },
