--- a/packages/docs/.eslintrc.json
+++ b/packages/docs/.eslintrc.json
@@ -1,6 +1,6 @@
 {
     "extends": [
-        "@nebula-ui/eslint-config",
+        "@nebulae-ui/eslint-config",
         "plugin:storybook/recommended"
     ]
 }
