--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nebula-ui/docs",
+  "name": "@nebulae-ui/docs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -33,10 +33,10 @@
     "vite": "^4.4.9"
   },
   "dependencies": {
-    "@nebula-ui/eslint-config": "*",
-    "@nebula-ui/react": "*",
-    "@nebula-ui/tokens": "*",
-    "@nebula-ui/ts-config": "*",
+    "@nebulae-ui/eslint-config": "*",
+    "@nebulae-ui/react": "*",
+    "@nebulae-ui/tokens": "*",
+    "@nebulae-ui/ts-config": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
