--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nebula-ui/react",
+  "name": "@nebulae-ui/react",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -14,9 +14,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@nebula-ui/eslint-config": "*",
-    "@nebula-ui/tokens": "*",
-    "@nebula-ui/ts-config": "*",
+    "@nebulae-ui/eslint-config": "*",
+    "@nebulae-ui/tokens": "*",
+    "@nebulae-ui/ts-config": "*",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
